# ros2_ws

./: .gitignore  frames_2026-03-05_16.00.45.gv  frames_2026-03-05_16.06.30.gv  frames_2026-03-05_16.11.48.gv  frames_2026-03-05_16.15.12.gv  frames_2026-03-05_16.18.32.gv  frames_2026-03-05_16.22.11.gv  frames_2026-03-05_16.43.03.gv  frames_2026-03-05_16.46.52.gv  frames_2026-03-05_16.48.20.gv  frames_2026-03-05_17.07.50.gv  frames_2026-03-05_17.11.59.gv  frames_2026-03-05_17.13.37.gv  frames_2026-03-10_17.47.20.gv  requirements.txt
src/actuation_pkg/: package.xml  setup.cfg  setup.py
src/actuation_pkg/actuation_pkg/: angle_test_publisher.py  arduino_servo_node.py  servo_node.py
src/actuation_pkg/config/: test_angles.yaml
src/camera_pkg/: CMakeLists.txt  README.md  package.xml
src/camera_pkg/config/: camera_params_dummy.yaml  camera_params_jetson.yaml  info_rx0_camera_1280_720.yaml
src/camera_pkg/launch/: calibration.launch.py  camera.launch.py  camera_dummy.launch.py  camera_jetson.launch.py  master.launch.py
src/camera_pkg/src/: cam2image_node.cpp
src/droneurdf2/: CMakeLists.txt  new_world.sdf  package.xml
src/droneurdf2/launch/: display.launch  display.launch.py  gazebo.launch  gazebo.launch.py  robot.launch.py
src/droneurdf2/urdf/: camera_sensor.xacro  drone.urdf  droneurdf2.csv  droneurdf2.xacro
src/droneurdf2/worlds/: my_robot.sdf  robot_world.sdf  test_camera.sdf
src/droneurdf2/worlds/models/: camera_link.STL  tilt_link.STL
src/perception_pkg/: CMakeLists.txt  package.xml
src/perception_pkg/config/: perception_params.yaml  perception_simulation.yaml
src/perception_pkg/include/perception_pkg/: helper_extract_target.hpp
src/perception_pkg/launch/: perception.launch.py  static.launch.py
src/perception_pkg/src/: depth_node.cpp  helper_extract_target.cpp  perception_node.cpp
src/pyperception_pkg/: README.md  package.xml  setup.cfg  setup.py
src/pyperception_pkg/launch/: perception.launch.py
src/pyperception_pkg/pyperception_pkg/: depth_node.py  multi_tracker_node.py  red_target_depth_node.py  red_target_node.py  target_node.py  yolo_node.py  yolo_node2.py  yolo_node3.py
src/robot_description/: CMakeLists.txt  package.xml  robot_description.xml
src/robot_description/config/: gen_cfg.yaml  pan_tilt_controller.yaml  ros_gz_bridge.yaml  rrbot_chained_controllers.yaml  rrbot_controllers.yaml
src/robot_description/controllers/include/passthrough_controller/: passthrough_controller.hpp
src/robot_description/gazebo/: rrbot.gazebo.xacro
src/robot_description/hardware/: rrbot.cpp
src/robot_description/hardware/include/robot_description/: rrbot.hpp
src/robot_description/launch/: drone.launch.py  gazebo.launch.py  newrrbot.launch.py  rrbot.launch.py  rrbot_gazebo.launch.py  rrbot_view.launch.py  rviz.launch.py  simulation.launch.py  test_forward_position_controller.launch.py
src/robot_description/models/agridrone/: agridrone.xacro  model.config  model.sdf
src/robot_description/urdf/: camera.xacro  robot_core.xacro  robot_joints.xacro  rrbot.ros2_control.xacro  rrbot.urdf.xacro  rrbot_description.urdf.xacro
src/robot_description/worlds/: empty.sdf
src/targeting_pkg/: package.xml  setup.cfg  setup.py
src/targeting_pkg/launch/: full_system_launch.py
src/targeting_pkg/models/agridrone/: pan_link.STL
src/targeting_pkg/targeting_pkg/: targeting_node.py
src/targeting_pkg/urdf/: agridrone.xacro
