<?xml version="1.0"?>
<package format="3">
  <name>camera_pkg</name>
  <version>0.0.1</version>
  <description>Camera to image publisher</description>
  <maintainer email="l.reints@student.utwente.nl">Larissa Reints</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>camera_info_manager</depend>
  <depend>ament_index_cpp</depend>
  <depend>opencv4</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
