<package format="2">
  <name>droneurdf2</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for droneURDF</p>
    <p>This package contains configuration data, 3D models and launch files
for droneURDF robot</p>
  </description>

  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  !-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>ros_gz_sim</build_depend>
  
  <!-- Run dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
