<package format="2">
  <name>robot_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF description package for the drone robot.
    Contains models, worlds and launch files.</p>
    
  </description>

  <author>LarissaReints</author>
  <maintainer email="l.reints@student.utwente.nl" />
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  
  <!-- Build dependencies -->
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>xacro</build_depend>

  
  <!-- Run dependencies -->
 
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>

  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
